--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "axios": "^1.6.0",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
-    "pinyin": "^2.9.1",
     "vue-router": "^4.0.3",
     "vue3-lazy": "^1.0.0-alpha.1",
     "vuex": "^4.0.0"
@@ -34,6 +33,7 @@
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^8.0.3",
     "sass": "^1.32.7",
-    "sass-loader": "^12.0.0"
+    "sass-loader": "^12.0.0",
+    "pinyin": "^2.9.1"
   }
 }
