--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "axios": "^1.6.0",
     "core-js": "^3.8.3",
     "good-storage": "^1.1.1",
+    "pinia": "^2.1.7",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
-    "vue3-lazy": "^1.0.0-alpha.1",
-    "vuex": "^4.0.0"
+    "vue3-lazy": "^1.0.0-alpha.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
