--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.0",
     "core-js": "^3.8.3",
     "good-storage": "^1.1.1",
+    "lyric-parser": "^1.0.1",
     "pinia": "^2.1.7",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
@@ -33,6 +34,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^8.0.3",
+    "js-base64": "^3.6.0",
     "pinyin": "^2.9.1",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0"
