生产环境配置

--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^8.0.3",
+    "express": "^4.18.2",
+    "compression": "^1.7.4",
+    "xsrf": "^1.0.0",
     "js-base64": "^3.6.0",
     "pinyin": "^2.9.1",
     "sass": "^1.32.7",
