--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "yarn run build && pm2 start backend/prod.server.js"
   },
   "dependencies": {
     "@better-scroll/core": "^2.5.1",
@@ -31,17 +32,18 @@
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-standard": "^6.1.0",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^8.0.3",
     "express": "^4.18.2",
-    "compression": "^1.7.4",
-    "xsrf": "^1.0.0",
     "js-base64": "^3.6.0",
     "pinyin": "^2.9.1",
     "sass": "^1.32.7",
-    "sass-loader": "^12.0.0"
+    "sass-loader": "^12.0.0",
+    "xsrf": "^1.0.0"
   }
 }
